# p5

./: .pylint  pyproject.toml
.github/workflows/: build-tests.yml
